코멘트 파일 코드 추가

--- a/html/03element.html
+++ b/html/03element.html
@@ -6,12 +6,18 @@
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias fuga eos adipisci, iure perspiciatis natus, earum debitis possimus fugit odio eligendi consectetur tempore aliquid minus similique doloremque molestias nihil ea.</h1>
 
     <hr>
-    
+
     <!-- <h1>Lorem, ipsum dolor.lorem5</h1> -->
     <!--<h1>Lorem, ipsum dolor.</h1>-->
+    
+    <!-- html 주석은 코드보기로 볼수 있으니 민감한 정보 작성 금지 -->
 
+    <!-- p*3>lorem -->
+    <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, temporibus! Repellat fugiat a provident reiciendis veritatis, cum voluptas officia dolor impedit magni porro repudiandae inventore eos nihil veniam? Eos, hic.</p>
+    <p>Minima doloribus porro voluptatum ducimus eum modi voluptate et inventore facere ea quia blanditiis, cumque nulla recusandae, aspernatur praesentium fuga vero labore, at nam ex incidunt cupiditate deserunt provident! Quia.</p>
+    <p>Voluptatem, velit mollitia autem cum molestiae recusandae tenetur ducimus perspiciatis quaerat ex suscipit excepturi natus nihil facilis, expedita placeat doloribus voluptatum pariatur minus quas fugit? Repellendus deserunt praesentium animi magni!</p> -->
 
-
-
+    <h1>Lorem, ipsum dolor.</h1>
+    <h1>Placeat, rerum voluptatibus?</h1>
 </body>
 </html>
